provider =>> variety agregados.-