@@ -6,10 +6,10 @@ import com.develop.beer2js.model.BarrelDTO;
 import com.develop.beer2js.repository.BarrelRepository;
 import com.develop.beer2js.repository.VarietyRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import javax.validation.Valid;
-import javax.websocket.server.PathParam;
 import java.util.List;
 
 @RestController
@@ -52,6 +52,16 @@ public class BarrelController {
             barrel.setTapped(updatedBarrel.isTapped());
             return barrelRepository.save(barrel);
         }).orElseThrow(() -> new ResourceNotFoundException("Barrel", "barrel_id", barrel_id));
+    }
+
+    @DeleteMapping("barrels/{barrel_id}")
+    public ResponseEntity<?> deleteBarrel(@PathVariable(value = "barrel_id") Long barrel_id){
+
+        return barrelRepository.findById(barrel_id).map(barrel -> {
+            barrelRepository.delete(barrel);
+            return ResponseEntity.ok().build();
+        }).orElseThrow(()-> new ResourceNotFoundException("Barrel","barrel_id",barrel_id));
+
     }
 
 
