@@ -1,1 +1,3 @@
-provider =>> variety agregados.-
+Provider - Variety agregados.
+
+barrelController: se agregaron PUT DELETE POST.
